# aliasmgr

./: CHANGELOG.md  Cargo.toml  README.md  agent.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  main.rs
src/app/: add.rs  catalog_path.rs  config_path.rs  disable.rs  edit.rs  enable.rs  file_path.rs  init.rs  list.rs  mod.rs  move.rs  remove.rs  rename.rs  shell.rs  sort.rs
src/catalog/: io.rs  mod.rs  spec.rs  types.rs
src/cli/: add.rs  convert.rs  disable.rs  edit.rs  enable.rs  init.rs  interaction.rs  list.rs  mod.rs  move.rs  remove.rs  rename.rs  sort.rs
src/config/: io.rs  mod.rs  spec.rs  types.rs
src/core/: add.rs  disable.rs  edit.rs  enable.rs  list.rs  mod.rs  move.rs  remove.rs  rename.rs  sort.rs  sync.rs
