[package]
name = "aliasmgr"
version = "0.1.0"
description = "An alias manager written in Rust"
authors = ["Felipe Faria <fariafelipe22@outlook.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
cross-xdg = "2.0.0"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"

[dev-dependencies]
assert_fs = "1.1.3"
