[package]
name = "aliasmgr"
version = "0.1.0"
description = "A CLI alias manager"
authors = ["Felipe Faria <fariafelipe22@outlook.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
cross-xdg = "2.0.0"
dialoguer = "0.12.0"
env_logger = "0.11.8"
indexmap = { version = "2.12.1", features = ["serde"] }
log = "0.4.28"
nix = "0.30.1"
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[dev-dependencies]
assert_fs = "1.1.3"
