[package]
name = "aliasmgr"
version = "0.1.1"
description = "A clean and simple CLI alias manager"
authors = ["Felipe Faria <fariafelipe22@outlook.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Faria22/aliasmgr"
categories = ["command-line-utilities"]
keywords = ["aliases", "shell", "cli", "manager"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
cross-xdg = "2.0.0"
dialoguer = "0.12.0"
env_logger = "0.11.8"
globset = "0.4.18"
indexmap = { version = "2.12.1", features = ["serde"] }
log = "0.4.28"
nix = "0.30.1"
owo-colors = "4.2.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = ["preserve_order"] }
toml_edit = "0.23.7"

[dev-dependencies]
assert_fs = "1.1.3"
assert_matches = "1.5.0"
temp-env = "0.3.6"
tempfile = "3.23.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }
